--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f9;
-    color: #333;
+    color: m#ff0000;
   }
   
   /* Cabeçalho */
   header {
-    background-color: #4a90e2;
-    color: white;
+    background-color: #181818;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 20px;
   }
@@ -23,7 +23,7 @@ body {
   
   /* Links */
   a {
-    color: #4a90e2;
+    color: #63e24a;
     text-decoration: none;
     font-weight: bold;
   }
